--- a/ar/botulinum-toxin-injections.html
+++ b/ar/botulinum-toxin-injections.html
@@ -18,7 +18,7 @@
   <title>BEAT THE SWEAT - Botulinum Toxin Injections.</title>
   <link rel="stylesheet" href="assets/css/bootstrap.rtl.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="assets/css/custom.css?v=2.104" />
+  <link rel="stylesheet" href="assets/css/custom.css?v=2.105" />
 </head>
 
 <body>
@@ -129,7 +129,7 @@
             <div class="row d-flex justify-content-center align-items-center">
               <div class="col-lg-12">
                 <div class="d-flex">
-                  <h1 class="d-inline-block h2 fw-bold display-5 text-animate">حقن توكسين البوتولينوم</h1>
+                  <h1 class="d-inline-block h2 fw-bold display-5 text-animate">حقن توكسين البوتولينوم (BTX-A)</h1>
                 </div>
               </div>
             </div>
@@ -142,14 +142,11 @@
             <div class="row">
               <div class="col-lg-8">
 
-                <p>هو أكثر العلاجات المدروسة فرط التعرق. يتم حقنه داخل الأدمة للعلاج فرط التعرق ويمنع إفراز الأسيتيل كولين عند التقاطع العصبي العضلي ومن الودي الأعصاب التي تعصب الغدد العرقية المفرزة.<sup>1</sup></p>
+                <p>هو من أكثر العلاجات المدروسة لحالة فرط التعرق. يتم حقنه داخل الأدمة للعلاج فرط التعرق ويمنع إفراز الأسيتيل كولين عند التقاطع العصبي العضلي ومن الودي الأعصاب التي تعصب الغدد العرقية المفرزة.<sup>1</sup></p>
                 <p>أكثر من 20 دراسة قامت بتقييم فعالية وسلامة حقن توكسين البوتولينوم في علاج فرط التعرق الإبطي حيث أظهرت استجابة علاجية كبيرة.<sup>1</sup></p>
-                <p>يتم تسويق العديد من منتجات BTX-A المختلفة في بلدان مختلفة ، وهي غير قابلة للتبادل. يتم إعادة تكوين مستحضرات المادة الدوائية السائبة BTX-A وتخفيفها لاختبار النشاط البيولوجي. على الرغم من أن المعايير الدولية لنشاط العديد من المنتجات
-                  البيولوجية قد وضعتها منظمة الصحة العالمية ، فلا يوجد معيار دولي لمنتجات BTX-A.</p>
-                <p>نتيجة لذلك ، يستخدم كل مصنع طرق الفحص الخاصة به لاختبار وحدات الفاعلية التي تتضمن معيارًا مرجعيًا خاصًا بالمنتج. لهذا السبب ، تكون وحدات النشاط البيولوجي خاصة بكل منتج BTX-A وجرعات الوحدات غير قابلة للتبديل.<sup>2</sup></p>
                 <div class="row">
                   <div class="col-12 col-lg-10 pb-3">
-                    <p class="bg-secondary px-2 py-2 text-white">يرجى مناقشة طبيبك المعالج حول جميع العلاجات قبل أي استخدام.</p>
+                    <p class="bg-secondary px-2 py-2 text-white">داوم داىما على مناقشة خيارات العلاج مع طبيبك المختص الدي سيصف العلاج المناسب لحالتك</p>
                   </div>
                 </div>
 
@@ -182,7 +179,6 @@
                         <ol class="font-en">
                           <li>A Comprehensive Approach to the Recognition, Diagnosis, and Severity-Based Treatment of Focal Hyperhidrosis:Recommendations of the Canadian Hyperhidrosis Advisory Committee NOWELL SOLISH Dermatol Surg 2007;33:908–923
                           </li>
-                          <li>Botulinum toxin type A products are not interchangeable: a review of the evidence Biologics. 2014; 8: 227–241.</li>
                         </ol>
                       </div>
                     </div>
@@ -221,6 +217,7 @@
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
           </ul>
+          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو 2023</p>
         </div>
 
         <div class="col-md-4 text-md-start order-md-1">
@@ -257,7 +254,7 @@
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.js"></script>
-  <script src="assets/js/custom.js?v=2.104" charset="utf-8"></script>
+  <script src="assets/js/custom.js?v=2.105" charset="utf-8"></script>
 </body>
 
 </html>
