--- a/en/botulinum-toxin-injections.html
+++ b/en/botulinum-toxin-injections.html
@@ -16,7 +16,7 @@
     <title>BEAT THE SWEAT - Botulinum Toxin Injections.</title>
               <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="assets/css/custom.css?v=2.104"/>
+    <link rel="stylesheet" href="assets/css/custom.css?v=2.105"/>
   </head>
   <body>
 
@@ -139,14 +139,15 @@
       <div class="row">
         <div class="col-lg-8">
 
-            <p>Botulinum toxin type - AT (BTX-A) is the best-studied treatment for focal hyperhidrosis. It is injected intradermally (in the skin) to treat hyperhidrosis and inhibits the release of acetylcholine at the neuromuscular junction (site of chemical communication between a nerve fiber and a muscle cell) and from the sympathetic nerves that innervate eccrine sweat glands.<sup>1</sup></p>
+            <p>Botulinum toxin type - A (BTX-A) is one the most-studied treatment for focal hyperhidrosis. It is injected intradermally (in the skin) to treat hyperhidrosis and inhibits the release of acetylcholine at the neuromuscular junction (site of chemical communication between a nerve fiber and a muscle cell) and from the sympathetic nerves that innervate eccrine sweat glands.<sup>1</sup></p>
             <p>More than 20 controlled studies have assessed the efficacy and safety of BTX-A in the treatment of axillary hyperhidrosis where it showed a significant treatment response.<sup>1</sup></p>
-            <p>Several different BTX-A products are marketed in various countries, and they are not interchangeable. The bulk drug substance BTX-A preparations are reconstituted and diluted for biological activity testing. Although international standards for the activity of many biological products are established by the World Health Organization, no international standard exists for BTX-A products.</p>
-            <p>As a result, each manufacturer employs its own proprietary assay methods for testing potency units that includes a product-specific reference standard. For this reason, units of biological activity are specific to each BTX-A product and unit doses are not interchangeable (not comparable).<sup>2</sup></p>
             <div class="row">
               <div class="col-12 col-lg-10 pb-3">
-                <p class="bg-secondary px-2 py-2 text-white">Please discuss with your doctor about all treatments before any use.</p>
+                <p class="bg-secondary px-2 py-2 text-white">Always discuss treatment options with your doctor who will prescribe the appropriate treatment for your condition.</p>
               </div>
+            </div>
+            <div class="d-none d-lg-block">
+              <br><br><br><br>
             </div>
 
 
@@ -177,7 +178,6 @@
                 <div class="accordion-body">
                   <ol class="font-en">
                     <li>A Comprehensive Approach to the Recognition, Diagnosis, and Severity-Based Treatment of Focal Hyperhidrosis:Recommendations of the Canadian Hyperhidrosis Advisory Committee NOWELL SOLISH Dermatol Surg 2007;33:908–923</li>
-                    <li>Botulinum toxin type A products are not interchangeable: a review of the evidence Biologics. 2014; 8: 227–241.</li>
                   </ol>
                 </div>
               </div>
@@ -217,6 +217,7 @@
         <ul class="nav flex-column">
           <li class="nav-item mb-2"><a href="en/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">Terms & Conditions</a></li>
         </ul>
+        <p class="text-md-center text-white fs-7">AE-AGNA-230130 | Preparation Date: Jul 2023</p>
       </div>
 
       <div class="col-md-4 text-md-end">
@@ -250,6 +251,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js" integrity="sha512-57oZ/vW8ANMjR/KQ6Be9v/+/h6bq9/l3f0Oc7vn6qMqyhvPd1cvKBRWWpzu0QoneImqr2SkmO4MSqU+RpHom3Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.js"></script>
-<script src="assets/js/custom.js?v=2.104" charset="utf-8"></script>
+<script src="assets/js/custom.js?v=2.105" charset="utf-8"></script>
 </body>
 </html>
