--- a/ar/botulinum-toxin-injections.html
+++ b/ar/botulinum-toxin-injections.html
@@ -142,8 +142,8 @@
             <div class="row">
               <div class="col-lg-8">
 
-                <p>هو من أكثر العلاجات المدروسة لحالة فرط التعرق. يتم حقنه داخل الأدمة للعلاج فرط التعرق ويمنع إفراز الأسيتيل كولين عند التقاطع العصبي العضلي ومن الودي الأعصاب التي تعصب الغدد العرقية المفرزة.<sup>1</sup></p>
-                <p>أكثر من 20 دراسة قامت بتقييم فعالية وسلامة حقن توكسين البوتولينوم في علاج فرط التعرق الإبطي حيث أظهرت استجابة علاجية كبيرة.<sup>1</sup></p>
+                <p>هو من أكثر العلاجات المدروسة لحالة فرط التعرق. يتم حقنه داخل الأدمة للعلاج فرط التعرق ويمنع إفراز الأسيتيل كولين عند التقاطع العصبي العضلي ومن الودي الأعصاب التي تعصب الغدد العرقية المفرزة.<sup>١</sup></p>
+                <p>أكثر من 20 دراسة قامت بتقييم فعالية وسلامة حقن توكسين البوتولينوم في علاج فرط التعرق الإبطي حيث أظهرت استجابة علاجية كبيرة.<sup>١</sup></p>
                 <div class="row">
                   <div class="col-12 col-lg-10 pb-3">
                     <p class="bg-secondary px-2 py-2 text-white">داوم داىما على مناقشة خيارات العلاج مع طبيبك المختص الدي سيصف العلاج المناسب لحالتك</p>
@@ -208,7 +208,7 @@
 
       <div class="row d-flex align-items-center justify-content-between">
         <div class="col-md-4 pb-5 pb-md-0 order-md-3 text-md-end">
-          <a href="https://www.allerganaesthetics.com/" target="_blank">
+          <a class="aa-logo" href="https://www.allerganaesthetics.com/" target="_blank">
             <img class="tagline-logo" src="assets/img/logo/logo.svg" alt="BEAT THE SWEAT">
           </a>
         </div>
@@ -217,7 +217,7 @@
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
           </ul>
-          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو 2023</p>
+          <p class="text-md-center text-white fs-7">AE-AGNA-230130 | تاريخ الاعداد : يوليو ٢٠٢٣</p>
         </div>
 
         <div class="col-md-4 text-md-start order-md-1">
